Revert fix overflowing wikitables
Doesn't work since it needs to be supplied to the parent element.

--- a/css/general.less
+++ b/css/general.less
@@ -56,8 +56,3 @@ code {
 .mw-ui-container {
     overflow: hidden;
 }
-
-.wikitable
-{
-    overflow: auto;
-}
